<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundItem"
    tools:context=".PurchasesListActivity">

    <TextView
        android:id="@+id/panelTop_basket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/top_panel"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:text="@string/basket"
        android:textAlignment="center"
        android:textAppearance="@style/textOnTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toTopOf="@+id/btnPayWithQR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/panelTop_basket">

        <LinearLayout
            android:id="@+id/containerPurchases"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/btnBackToScan"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/btn_blue_pressed_dark_blue"
        android:padding="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/qr_code"
        android:textAllCaps="false"
        android:textAppearance="@style/textOnButtons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnPayWithQR"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93"
        app:srcCompat="@drawable/icon_back" />

    <Button
        android:id="@+id/btnPayWithQR"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/btn_blue_pressed_dark_blue"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/qr_code"
        android:textAllCaps="false"
        android:textAppearance="@style/textOnButtons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93" />

    <Button
        android:id="@+id/btnPayWithApp"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/pay_with_app"
        android:background="@drawable/btn_blue_pressed_dark_blue"
        android:textAppearance="@style/textOnButtons"
        android:textAllCaps="false"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnPayWithQR"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93" />
</androidx.constraintlayout.widget.ConstraintLayout>